[package]
name = "named_pipe_snipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
log = "0.4.20"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows-sys = "0.52.0"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
bytes = "1.0"
prost = "0.12.3"
prost-build = "0.12.3"
byteorder = "1.5.0"
tracing-appender = "0.2.3" 
serde_cbor = "0.11.2"
copystr = "0.0.5"
cbor4ii = { version = "0.3.2", features = ["serde1"] }
compact_str = { version = "0.7.1", features = ["serde", "bytes", "smallvec"] }
smallvec = "1.13.1"

[build-dependencies]
prost-build = { version = "0.12.3" }
