[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
uuid = { version = "1.4", features = [
	"serde",
	"v4",
	"fast-rng",
	"macro-diagnostics",
] }
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
