[package]
name = "zenactor_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
	"cdylib",
	"lib",
] # Both so that we can also build for our test crate in Rust
#path = "src/lib.rs"

#[[bin]]
#name = "zenactor_ffi_bin"
#path = "src/main.rs"


[dependencies]
anyhow = "1.0"
#tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
crossbeam = "0.8"
log = "0.4.20"
simplelog = { version = "^0.12.0", features = ["paris"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
uuid = { version = "1.4", features = [
	"serde",
	"v4",
	"fast-rng",
	"macro-diagnostics",
] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = [] }
serde_json = { version = "1.0.108", features = [] }
derive_more = "0.99"
scc = "2.0.7"
#tokio-util = { version = "0.7", features = ["codec"] }
#tokio-stream = { version = "0.1" }
protocol = { path = "../protocol" }
libc = "0.2"

[dependencies.windows]
version = "0.*"
features = [
	"Win32_Foundation",
	"Win32_System_SystemServices",
	"Win32_UI_WindowsAndMessaging",
]
