[package]
name = "zenactor_ffi_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenactor_ffi = { path = "../zenactor_ffi" }
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
log = "0.4.20"
simplelog = { version = "^0.12.0", features = ["paris"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
