[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3" 
windows-sys = "0.52.0"
serde = { version = "1.0.130", features = ["derive"] }
bytes = "1.0"
byteorder = "1.5.0"
cbor4ii = { version = "0.3.2", features = ["serde1"] }
compact_str = { version = "0.7.1", features = ["serde", "bytes", "smallvec"] }
smallvec = "1.13.1"
axum = "0.7.4"
log = "0.4.21"
tower = "0.4.13"
clap = { version = "4.5.2", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["full"] }
